crates/rym_parser/src/tests/snapshots/rym_parser__tests__modules__empty-6.snap
---
source: crates/rym_parser/src/tests/modules.rs
expression: "&snapshot"
---
--- Input ---
mod;
---

None

--- Errors ---
[
    ParseError {
        span: 3..4,
        reason: ExpectedFound {
            expected: [
                Identifier,
            ],
            found: Some(
                Semi,
            ),
        },
    },
]
---
