crates/rym_parser/src/tests/snapshots/rym_parser__tests__modules__empty.snap
---
source: crates/rym_parser/src/tests/modules.rs
expression: "&snapshot"
---
--- Input ---
mod name {}
---

Some(
    Spanned(
        Module {
            name: Spanned(
                "name",
                4..8,
            ),
            items: [],
        },
        0..11,
    ),
)

--- Errors ---
[]
---
