crates/rym_parser/src/tests/snapshots/rym_parser__tests__modules__file.snap
---
source: crates/rym_parser/src/tests/modules.rs
expression: "&snapshot"
---
--- Input ---
/// useless function for adding two values together
func add(x, y) {
	x + y; // here we add them
}

func multiply(x, y) {
	// here we are multiplying x by y
	x * y;
}

func main() {
	print("Hello World!");
	add(2, 3);
	multiply(3, 2);
}
---

Some(
    [
        Spanned(
            Func {
                name: Spanned(
                    "add",
                    57..60,
                ),
                params: [
                    Spanned(
                        "x",
                        61..62,
                    ),
                    Spanned(
                        "y",
                        64..65,
                    ),
                ],
                rhs: Some(
                    Spanned(
                        Block(
                            Spanned(
                                [
                                    Spanned(
                                        Binary(
                                            Spanned(
                                                Ident(
                                                    Spanned(
                                                        "x",
                                                        70..71,
                                                    ),
                                                ),
                                                70..71,
                                            ),
                                            Add,
                                            Spanned(
                                                Ident(
                                                    Spanned(
                                                        "y",
                                                        74..75,
                                                    ),
                                                ),
                                                74..75,
                                            ),
                                        ),
                                        70..76,
                                    ),
                                ],
                                67..98,
                            ),
                        ),
                        67..98,
                    ),
                ),
            },
            52..98,
        ),
        Spanned(
            Func {
                name: Spanned(
                    "multiply",
                    105..113,
                ),
                params: [
                    Spanned(
                        "x",
                        114..115,
                    ),
                    Spanned(
                        "y",
                        117..118,
                    ),
                ],
                rhs: Some(
                    Spanned(
                        Block(
                            Spanned(
                                [
                                    Spanned(
                                        Binary(
                                            Spanned(
                                                Ident(
                                                    Spanned(
                                                        "x",
                                                        158..159,
                                                    ),
                                                ),
                                                158..159,
                                            ),
                                            Mul,
                                            Spanned(
                                                Ident(
                                                    Spanned(
                                                        "y",
                                                        162..163,
                                                    ),
                                                ),
                                                162..163,
                                            ),
                                        ),
                                        158..164,
                                    ),
                                ],
                                120..166,
                            ),
                        ),
                        120..166,
                    ),
                ),
            },
            100..166,
        ),
        Spanned(
            Func {
                name: Spanned(
                    "main",
                    173..177,
                ),
                params: [],
                rhs: Some(
                    Spanned(
                        Block(
                            Spanned(
                                [
                                    Spanned(
                                        Call {
                                            func: Spanned(
                                                Ident(
                                                    Spanned(
                                                        "print",
                                                        183..188,
                                                    ),
                                                ),
                                                183..188,
                                            ),
                                            args: Spanned(
                                                [
                                                    Spanned(
                                                        Literal(
                                                            Spanned(
                                                                String("Hello World!"),
                                                                189..203,
                                                            ),
                                                        ),
                                                        189..203,
                                                    ),
                                                ],
                                                188..204,
                                            ),
                                        },
                                        183..205,
                                    ),
                                    Spanned(
                                        Call {
                                            func: Spanned(
                                                Ident(
                                                    Spanned(
                                                        "add",
                                                        207..210,
                                                    ),
                                                ),
                                                207..210,
                                            ),
                                            args: Spanned(
                                                [
                                                    Spanned(
                                                        Literal(
                                                            Spanned(
                                                                Int(2),
                                                                211..212,
                                                            ),
                                                        ),
                                                        211..212,
                                                    ),
                                                    Spanned(
                                                        Literal(
                                                            Spanned(
                                                                Int(3),
                                                                214..215,
                                                            ),
                                                        ),
                                                        214..215,
                                                    ),
                                                ],
                                                210..216,
                                            ),
                                        },
                                        207..217,
                                    ),
                                    Spanned(
                                        Call {
                                            func: Spanned(
                                                Ident(
                                                    Spanned(
                                                        "multiply",
                                                        219..227,
                                                    ),
                                                ),
                                                219..227,
                                            ),
                                            args: Spanned(
                                                [
                                                    Spanned(
                                                        Literal(
                                                            Spanned(
                                                                Int(3),
                                                                228..229,
                                                            ),
                                                        ),
                                                        228..229,
                                                    ),
                                                    Spanned(
                                                        Literal(
                                                            Spanned(
                                                                Int(2),
                                                                231..232,
                                                            ),
                                                        ),
                                                        231..232,
                                                    ),
                                                ],
                                                227..233,
                                            ),
                                        },
                                        219..234,
                                    ),
                                ],
                                180..236,
                            ),
                        ),
                        180..236,
                    ),
                ),
            },
            168..236,
        ),
    ],
)

--- Errors ---
[]
---
