crates/rym_parser/src/tests/snapshots/rym_parser__tests__modules__mixed.snap
---
source: crates/rym_parser/src/tests/modules.rs
expression: "&snapshot"
---
--- Input ---
mod name {
	func testing() {}
	let this = testing();
}
---

Some(
    Spanned(
        Module {
            name: Spanned(
                "name",
                4..8,
            ),
            items: [
                Spanned(
                    Func {
                        name: Spanned(
                            "testing",
                            17..24,
                        ),
                        params: [],
                        rhs: Some(
                            Spanned(
                                Block(
                                    Spanned(
                                        [],
                                        27..29,
                                    ),
                                ),
                                27..29,
                            ),
                        ),
                    },
                    12..29,
                ),
                Spanned(
                    Var {
                        name: Spanned(
                            "this",
                            35..39,
                        ),
                        rhs: Spanned(
                            Call {
                                func: Spanned(
                                    Ident(
                                        Spanned(
                                            "testing",
                                            42..49,
                                        ),
                                    ),
                                    42..49,
                                ),
                                args: Spanned(
                                    [],
                                    49..51,
                                ),
                            },
                            42..51,
                        ),
                    },
                    31..52,
                ),
            ],
        },
        0..54,
    ),
)

--- Errors ---
[]
---
